--- a/package.json
+++ b/package.json
@@ -6,11 +6,10 @@
         "dev": "next dev",
         "build": "next build",
         "start": "next start",
-        "lint": "next lint",
-        "export": "next export"
+        "lint": "next lint"
     },
     "dependencies": {
-        "@radix-ui/react-dropdown-menu": "^2.1.2",
+        "@gstore/core": "*",
         "@radix-ui/react-slot": "^1.1.0",
         "@tabler/icons-react": "^3.19.0",
         "class-variance-authority": "^0.7.1",
@@ -19,7 +18,6 @@
         "next": "14.2.13",
         "react": "^18",
         "react-dom": "^18",
-        "react-icons": "^5.3.0",
         "tailwind-merge": "^2.5.5",
         "tailwindcss-animate": "^1.0.7"
     },
