--- a/package.json
+++ b/package.json
@@ -10,9 +10,11 @@
     },
     "dependencies": {
         "@radix-ui/react-slot": "^1.1.0",
-        "@tabler/icons-react": "^3.19.0",
+        "@tabler/icons-react": "^3.27.1",
         "class-variance-authority": "^0.7.1",
         "clsx": "^2.1.1",
+        "js-cookie": "^3.0.5",
+        "jwt-decode": "^4.0.0",
         "lucide-react": "^0.462.0",
         "next": "14.2.13",
         "react": "^18",
@@ -21,6 +23,7 @@
         "tailwindcss-animate": "^1.0.7"
     },
     "devDependencies": {
+        "@types/js-cookie": "^3.0.6",
         "@types/node": "^20",
         "@types/react": "^18",
         "@types/react-dom": "^18",
