--- a/package.json
+++ b/package.json
@@ -13,13 +13,14 @@
         "@tabler/icons-react": "^3.27.1",
         "class-variance-authority": "^0.7.1",
         "clsx": "^2.1.1",
+        "framer-motion": "^11.18.1",
         "js-cookie": "^3.0.5",
         "jwt-decode": "^4.0.0",
         "lucide-react": "^0.462.0",
         "next": "14.2.13",
         "react": "^18",
         "react-dom": "^18",
-        "tailwind-merge": "^2.5.5",
+        "tailwind-merge": "^2.6.0",
         "tailwindcss-animate": "^1.0.7"
     },
     "devDependencies": {
