--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     },
     "devDependencies": {
         "@types/js-cookie": "^3.0.6",
+        "@types/jwt-decode": "^3.1.0",
         "@types/node": "^20",
         "@types/react": "^18",
         "@types/react-dom": "^18",
