--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
         "@tabler/icons-react": "^3.27.1",
         "class-variance-authority": "^0.7.1",
         "clsx": "^2.1.1",
+        "crypto-js": "^4.2.0",
         "framer-motion": "^11.18.1",
         "js-cookie": "^3.0.5",
         "jwt-decode": "^4.0.0",
@@ -24,6 +25,7 @@
         "tailwindcss-animate": "^1.0.7"
     },
     "devDependencies": {
+        "@types/crypto-js": "^4.2.2",
         "@types/js-cookie": "^3.0.6",
         "@types/jwt-decode": "^3.1.0",
         "@types/node": "^20",
