--- a/package.json
+++ b/package.json
@@ -14,11 +14,13 @@
         "class-variance-authority": "^0.7.1",
         "clsx": "^2.1.1",
         "crypto-js": "^4.2.0",
+        "express": "^4.21.2",
         "framer-motion": "^11.18.1",
         "js-cookie": "^3.0.5",
         "jwt-decode": "^4.0.0",
         "lucide-react": "^0.462.0",
         "next": "14.2.13",
+        "nodemailer": "^6.10.0",
         "react": "^18",
         "react-dom": "^18",
         "tailwind-merge": "^2.6.0",
